--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-dist: bionic
+os: linux
+dist: xenial
 
 language:
   - cpp
@@ -9,7 +10,6 @@ before_install:
 addons:
   sonarcloud:
     organization: "danilakostin"
-    token: ${COV}
 
 script:
   - qmake
@@ -17,10 +17,14 @@ script:
   - ./tests/tests
 
 after_success:
-  - make clean
   - coveralls --root . -E ".*external.*" -E ".*tests.*"
   - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
-  - sonar-scanner -Dsonar.cfamily.build-wrapper-output=bw-output
+  - sonar-scanner
+
+cache:
+  directories:
+  - '$HOME/.m2/repository'
+  - '$HOME/.sonar/cache'
 
 notifications:
   email: false
