--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 addons:
   sonarcloud:
-    organization: "bloody-azimus"
+    organization: "danilakostin"
     token: $SONAR_TOKEN
 
 script:
